<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FHW Splan</string>
    <string name="settings_deselect_all_lectures">Deselect all</string>
    <string name="settings_select_all_lectures">Select all filtered</string>
    <string name="action_edit_timetable">Edit lectures</string>
    <string name="week_day_mon_short">Mon</string>
    <string name="week_day_tue_short">Tue</string>
    <string name="week_day_wed_short">Wed</string>
    <string name="week_day_thu_short">Thu</string>
    <string name="week_day_fri_short">Fri</string>
    <string name="week_day_mon_long">Monday</string>
    <string name="week_day_tue_long">Tuesday</string>
    <string name="week_day_wed_long">Wednesday</string>
    <string name="week_day_thu_long">Thusday</string>
    <string name="week_day_fri_long">Friday</string>
    <string name="title_activity_settings">Select Lectures</string>
    <string name="button_save">Save</string>
    <string name="button_show">Show</string>
    <string name="lecture">Lecture</string>
    <string name="semester">Semester</string>
    <string name="employee">"Employee"</string>
    <string name="faculty">Faculty</string>
    <string name="settings_filter">Filter</string>
    <string name="placeholder">Placeholder</string>
    <string name="all_value">All</string>

</resources>