<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/layout_divider"
    android:dividerPadding="1dp"
    android:orientation="vertical"
    android:padding="2dp"
    android:showDividers="middle" >

    <TextView
        android:id="@+id/settings_filter_fragment_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/faculty"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/settings_filter_fragment_spinnerFaculty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp" />

    <TextView
        android:id="@+id/settings_filter_fragment_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/semester"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/settings_filter_fragment_spinnerSemester"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp" />

    <TextView
        android:id="@+id/settings_filter_fragment_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/employee"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/settings_filter_fragment_spinnerEmployee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/settings_filter_btnCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/settings_filter_btnSave"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_save" />
    </LinearLayout>

</LinearLayout>