<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtMonday"
            android:layout_width="@dimen/timetable_day_selector_size"
            android:layout_height="@dimen/timetable_day_selector_size"
            android:layout_margin="@dimen/timetable_day_selector_margin"
            android:background="@drawable/day_of_week_button_style"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClickDayOfWeek"
            android:text="@string/week_day_mon_short"
            android:textSize="@dimen/timetable_day_selector_font_size" />

        <TextView
            android:id="@+id/txtTuesday"
            android:layout_width="@dimen/timetable_day_selector_size"
            android:layout_height="@dimen/timetable_day_selector_size"
            android:layout_margin="@dimen/timetable_day_selector_margin"
            android:background="@drawable/day_of_week_button_style"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClickDayOfWeek"
            android:text="@string/week_day_tue_short"
            android:textSize="@dimen/timetable_day_selector_font_size" />

        <TextView
            android:id="@+id/txtWednesday"
            android:layout_width="@dimen/timetable_day_selector_size"
            android:layout_height="@dimen/timetable_day_selector_size"
            android:layout_margin="@dimen/timetable_day_selector_margin"
            android:background="@drawable/day_of_week_button_style"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClickDayOfWeek"
            android:text="@string/week_day_wed_short"
            android:textSize="@dimen/timetable_day_selector_font_size" />

        <TextView
            android:id="@+id/txtThursday"
            android:layout_width="@dimen/timetable_day_selector_size"
            android:layout_height="@dimen/timetable_day_selector_size"
            android:layout_margin="@dimen/timetable_day_selector_margin"
            android:background="@drawable/day_of_week_button_style"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClickDayOfWeek"
            android:text="@string/week_day_thu_short"
            android:textSize="@dimen/timetable_day_selector_font_size" />

        <TextView
            android:id="@+id/txtFriday"
            android:layout_width="@dimen/timetable_day_selector_size"
            android:layout_height="@dimen/timetable_day_selector_size"
            android:layout_margin="@dimen/timetable_day_selector_margin"
            android:background="@drawable/day_of_week_button_style"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClickDayOfWeek"
            android:text="@string/week_day_fri_short"
            android:textSize="@dimen/timetable_day_selector_font_size" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/svLectures"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/timetable_day_selector_margin" >

        <LinearLayout
            android:id="@+id/TimeTableContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerPadding="2dp"
            android:orientation="vertical" >

        </LinearLayout>

    </ScrollView>

</LinearLayout>